--- a/app/src/main/res/layout/notify_21.xml
+++ b/app/src/main/res/layout/notify_21.xml
@@ -13,7 +13,7 @@
 		android:layout_marginLeft="8dp"
 		android:layout_marginRight="8dp"
 		android:layout_weight="0"
-		android:src="@mipmap/ic_launcher" />
+		android:src="@mipmap/ic_launcher_foreground" />
 	<TextView
 		android:id="@+id/status_text_21"
 		android:layout_width="wrap_content"
@@ -21,7 +21,7 @@
 		android:layout_alignParentTop="true"
 		android:singleLine="true"
 		android:layout_weight="90"
-		android:text="Xash3D"
+		android:text="CSMoE"
 		android:layout_gravity="center_vertical"
 		android:textColor="#000000" />
 	<Button
